@@ -50,35 +50,17 @@ sub action_reindex
 
 	my $session = $self->{session};
 	my $eprint = $self->{processor}->{eprint};
-	my $dataset = $eprint->{dataset};
 
-	my $database = $session->get_database;
-
-	foreach my $field ( $dataset->get_fields )
-	{
-		next unless $field->get_property( "text_index" );
-		$database->index_queue(
-			'eprint',
-			$eprint->get_id,
-			$field->get_name );
-	}
+	$eprint->queue_all();
 
 	# Remove all document index files to force re-texting them
 	foreach my $doc ($eprint->get_all_documents())
 	{
-		my $docs = $doc->get_related_objects(
-				EPrints::Utils::make_relation( "hasIndexCodesVersion" )
-			);
-		$_->remove() for @$docs;
-		$doc->commit() if scalar @$docs; # commit the change in relation
+		$doc->remove_indexcodes();
 	}
 
 	# Redo the fulltext-index
-	$database->index_queue(
-		'eprint',
-		$eprint->get_id,
-		$EPrints::Utils::FULLTEXT
-	);
+	$eprint->queue_fulltext();
 
 	$self->add_result_message( 1 );
 }
